# majordomo

./: .gitignore  .travis.yml  AUTHORS  Makefile  Makefile.in  README.md  aclocal.m4  config.status  configure  configure.ac  libtool  project.xml
C/: .gitignore  AUTHORS  README  autogen.sh  configure.in
C/doc/: Makefile.am  asciidoc.conf
C/src/: Makefile.am
bindings/: README
bindings/dotnet/: README.txt  dotnet.sln
bindings/dotnet/mdpwrapper/: ReadMe.txt  mdpwrapper.cpp  mdpwrapper.h  mdpwrapper.vcxproj  mdpwrapper.vcxproj.filters  stdafx.cpp
bindings/dotnet/zeromq.majordomo.csharp/: Client.cs  Request.cs  Response.cs  zeromq.majordomo.csharp.csproj
bindings/dotnet/zeromq.majordomo.test.workerconsole/: Program.cs  zeromq.majordomo.test.workerconsole.csproj
bindings/dotnet/zeromq.majordomo.testclient/: Program.cs  zeromq.majordomo.test.clientconsole.csproj
bindings/ruby/: CHANGELOG.rdoc  README.rdoc  Rakefile  mdp.gemspec
builds/msvc/: msvc.sln
doc/: Makefile  Makefile.am  Makefile.in  asciidoc.conf  majordomo.7  majordomo.txt  majordomo_broker.txt  majordomo_client.txt  majordomo_worker.txt  mdp_broker.3  mdp_broker.doc  mdp_broker.txt  mdp_client.3  mdp_client.doc  mdp_client.txt  mdp_client_msg.3  mdp_client_msg.doc  mdp_client_msg.txt  mdp_msg.3  mdp_msg.doc  mdp_msg.txt  mdp_test.7  mdp_test.txt  mdp_worker.3  mdp_worker.doc  mdp_worker.txt  mdp_worker_msg.3  mdp_worker_msg.doc  mdp_worker_msg.txt
include/: majordomo.h  majordomo_library.h  mdp_broker.h  mdp_client.h  mdp_client_msg.h  mdp_msg.h  mdp_worker.h  mdp_worker_msg.h
libmdp/: .gitignore  configure.in
libmdp/doc/: mdp.txt
libmdp/include/: cmdp_common.h  mdp.h  mdp_client.h  mdp_common.h  mdp_worker.h
libmdp/src/: Makefile.am  engine.c  libmdp.pc.in  mdp_broker.c  mdp_client.c  mdp_worker.c  test_client.c  test_worker.c  trader.c
src/: Makemodule.am  libmajordomo.pc  libmajordomo.pc.in  license.xml  majordomo_classes.h  majordomo_selftest.c  mdp_broker.c  mdp_broker.xml  mdp_broker_engine.inc  mdp_client.c  mdp_client.xml  mdp_client_engine.inc  mdp_client_msg.bnf  mdp_client_msg.c  mdp_client_msg.xml  mdp_msg.bnf  mdp_msg.c  mdp_msg.xml  mdp_test.c  mdp_worker.c  mdp_worker.xml  mdp_worker_engine.inc  mdp_worker_msg.bnf  mdp_worker_msg.c  mdp_worker_msg.xml  platform.h  platform.h.in
(+32 files in other folders)
